Align 'PRESSEMITTEILUNG' correctly on smaller screens

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -12,7 +12,6 @@ main .block.hero .back-link-line {
 
 main .block.hero .headline-brow {
   color: var(--headline-color-eyebrow);
-  grid-column: 3/-3;
   font-size: 0.75rem;
   font-weight: 500;
   letter-spacing: 0.01em;
@@ -45,13 +44,13 @@ main .block.hero a.back-link:hover + a.back-link-icon svg {
 }
 
 @media (min-width: 48rem) {
-  main .block.hero>div {
+  main .block.hero>div, main .block.hero .headline-brow {
     grid-column: 2/6;
   }
 }
 
 @media (min-width: 64rem) {
-  main .block.hero>div {
+  main .block.hero>div, main .block.hero .headline-brow {
     grid-column: 3/-3;
   }
 }
